修复bugs