@@ -18,6 +18,7 @@ package cc.lanternmc.materiallauncher.core.launch
 
 import java.io.File
 import java.util.concurrent.TimeUnit
+import java.util.concurrent.atomic.AtomicBoolean
 import kotlinx.coroutines.Dispatchers
 import kotlinx.coroutines.withContext
 import kotlinx.serialization.json.Json
@@ -27,6 +28,7 @@ import cc.lanternmc.materiallauncher.core.download.LibraryDownloader
 import cc.lanternmc.materiallauncher.core.model.VersionJson
 import cc.lanternmc.materiallauncher.core.util.Logger
 import cc.lanternmc.materiallauncher.core.util.Os
+import cc.lanternmc.materiallauncher.core.util.compareMinecraftVersion
 import cc.lanternmc.materiallauncher.core.util.currentOs
 
 class LauncherException(message: String, cause: Throwable? = null) : Exception(message, cause)
@@ -65,7 +67,7 @@ class LaunchService(
         val versionInfo = json.decodeFromString<VersionJson>(versionJsonFile.readText())
 
         Logger.info("[1/4] 正在检查并修复 options.txt...")
-        OptionsSanitizer.sanitize(File(gameDir))
+        OptionsSanitizer.sanitize(if (isolateVersion) File(actualGameDir) else File(gameDir))
 
         Logger.info("[2/4] 正在多线程下载/补齐 Assets 资源...")
         assetDownloader.downloadAssets(gameDir, versionInfo.assetIndex)
@@ -114,15 +116,20 @@ class LaunchService(
             "-Dstdout.encoding=UTF-8",
             "-Dstderr.encoding=UTF-8",
         )
-        val optionalArgs = listOf(
-            "--enable-native-access=ALL-UNNAMED",
-            "--sun-misc-unsafe-memory-access=allow",
-        )
-        for (option in optionalArgs) {
-            if (javaSupportsOption(javaPath, option)) {
-                jvmArgs.add(option)
-            } else {
-                Logger.warn("跳过当前 Java 不支持的 JVM 参数: $option")
+        val javaMajor = detectJavaMajor(javaPath)
+        if (usesLwjgl2(versionId)) {
+            addLwjgl2CompatibilityArgs(javaPath, javaMajor, jvmArgs)
+        } else {
+            val optionalArgs = listOf(
+                "--enable-native-access=ALL-UNNAMED",
+                "--sun-misc-unsafe-memory-access=allow",
+            )
+            for (option in optionalArgs) {
+                if (javaSupportsOption(javaPath, option)) {
+                    jvmArgs.add(option)
+                } else {
+                    Logger.warn("跳过当前 Java 不支持的 JVM 参数: $option")
+                }
             }
         }
 
@@ -152,11 +159,22 @@ class LaunchService(
         val pid = process.pid().toInt()
         Logger.info("Minecraft 启动成功, pid=$pid")
 
+        val ready = AtomicBoolean(false)
+        fun markReady() {
+            if (ready.compareAndSet(false, true)) {
+                emit(LauncherEvent.GameReady(pid))
+            }
+        }
+
         Thread {
             process.inputStream.bufferedReader(Charsets.UTF_8).forEachLine { line ->
                 Logger.info("[MC] $line")
-                if (line.contains("Setting user:") || line.contains("Launched game")) {
-                    emit(LauncherEvent.GameReady(pid))
+                if (line.contains("Setting user:")
+                    || line.contains("Launched game")
+                    || line.contains("Backend library:")
+                    || line.contains("Created:")
+                ) {
+                    markReady()
                 }
             }
             Logger.info("[MC] stdout 已关闭")
@@ -165,6 +183,15 @@ class LaunchService(
         Thread {
             process.errorStream.bufferedReader(Charsets.UTF_8).forEachLine { line ->
                 Logger.warn("[MC-ERR] $line")
+            }
+        }.apply { isDaemon = true }.start()
+
+        // 兜底：若 stdout 里没有可识别的就绪关键字，进程存活一段时间即视为已启动。
+        Thread {
+            try {
+                Thread.sleep(10_000)
+                if (process.isAlive) markReady()
+            } catch (_: InterruptedException) {
             }
         }.apply { isDaemon = true }.start()
 
@@ -191,4 +218,54 @@ class LaunchService(
             process.exitValue() == 0
         }
     }.getOrDefault(false)
+
+    /**
+     * 1.13 之前的版本使用 LWJGL 2，在现代 JVM 上需要 --add-opens 才能反射到 JDK 内部。
+     */
+    private fun usesLwjgl2(versionId: String): Boolean = compareMinecraftVersion(versionId, "1.13") < 0
+
+    private fun addLwjgl2CompatibilityArgs(javaPath: String, javaMajor: Int, jvmArgs: MutableList<String>) {
+        if (javaMajor <= 8) return
+        Logger.info("LWJGL2 版本 + Java $javaMajor，正在追加兼容参数...")
+        val addOpens = listOf(
+            "java.base/java.lang",
+            "java.base/java.lang.reflect",
+            "java.base/java.nio",
+            "java.base/sun.nio.ch",
+            "java.base/java.util",
+            "java.base/java.util.concurrent",
+            "java.base/java.util.zip",
+            "java.base/java.math",
+            "java.base/java.io",
+            "java.base/java.net",
+            "java.base/jdk.internal.loader",
+            "java.desktop/java.awt",
+            "java.desktop/java.beans",
+            "java.desktop/sun.awt",
+            "java.desktop/sun.awt.image",
+        )
+        for (module in addOpens) {
+            val arg = "--add-opens=$module=ALL-UNNAMED"
+            if (javaSupportsOption(javaPath, arg)) {
+                jvmArgs.add(arg)
+            }
+        }
+        for (option in listOf(
+            "--enable-native-access=ALL-UNNAMED",
+            "--sun-misc-unsafe-memory-access=allow",
+        )) {
+            if (javaSupportsOption(javaPath, option)) {
+                jvmArgs.add(option)
+            }
+        }
+    }
+
+    private fun detectJavaMajor(javaPath: String): Int = runCatching {
+        val process = ProcessBuilder(javaPath, "-version").redirectErrorStream(true).start()
+        val output = process.inputStream.bufferedReader().use { it.readText() }
+        process.waitFor(5, TimeUnit.SECONDS)
+        val match = Regex("version \"(\\d+)").find(output) ?: return@runCatching 8
+        val major = match.groupValues[1].toInt()
+        if (major == 1) 8 else major
+    }.getOrDefault(8)
 }
